--- a/project_report/report.tex
+++ b/project_report/report.tex
@@ -270,9 +270,9 @@ Pipelined processors are typically designed to be faster than non-pipelined proc
 
 GitHub links for codes of different processors: 
 \begin{itemize}
-    \item Single Cycle Processor (Task 1): \url{https://github.com/AliMuhammadAsad/Computer-Architecture-Spring-23/tree/main/Single%20Cycle%20RISC%20V%20-%20Project%20Task1}
-    \item Pipelined Processor (Task 2): \url{https://github.com/AliMuhammadAsad/Computer-Architecture-Spring-23/tree/main/RISC_V%20Pipelined%20Processor}
-    \item Pipelined Processor with Hazard Detection (Task 3): \url{https://github.com/AliMuhammadAsad/Computer-Architecture-Spring-23/tree/main/RISC_V_Pipelined_Complete}
+    \item Single Cycle Processor (Task 1): \url{https://github.com/NehalNN10/CA-final-project/blob/5b606f284db6f33765f0c830730e5cee43c01f18/final_project/final_project.srcs/sources_1/new/RISCV_Processor.v}
+    \item Pipelined Processor (Task 2): \url{https://github.com/NehalNN10/CA-final-project/blob/5b606f284db6f33765f0c830730e5cee43c01f18/final_project/final_project.srcs/sources_1/new/pipelinedProcessor.v}
+    \item Pipelined Processor with Hazard Detection (Task 3): \url{https://github.com/NehalNN10/CA-final-project/blob/5b606f284db6f33765f0c830730e5cee43c01f18/final_project/final_project.srcs/sources_1/new/hazardProcessor.v}
 \end{itemize}
 
 \end{document}
