--- a/project_report/report.tex
+++ b/project_report/report.tex
@@ -172,24 +172,31 @@ bubble:
     We implemented the converted algorithm on the RISC V single-cycle processor developed in our lab sessions (from lab 05 till lab 12). To make the processor compatible with the algorithm, we made some adjustments to the ALU and instruction memory. Specifically, we added a Branch Unit module to support the bgt and blt commands used in the algorithm. Additionally, we introduced an addermuxselect input to control the last mux in the processor. This allowed us to change the instruction that was in the program counter from the sequentially next one to one that may have been behind (or ahead, due to branching). These modifications enabled us to run the sorting algorithm effectively on the RISC V processor.
     
 \subsection{Changes}
-    We made changes in ALU64 bit and added the funct 3's of blt and bge so that their functionality can be added. Moreover, we added the function for slli. Further, we altered the data memory, and instruction memory. Instruction memory was initialised with dummy values initially. We initialised all to 0 so as to make it function properly. The data memory was initialised with array values for sorting. An entire branch unit module was added to manage branch and output a signal addermuxselect which was then ANDED with branch in the toplevelmodule to give the branch decission.
+    We made changes in ALU64 bit and added the funct 3's of blt and bge so that their functionality can be added. Moreover, we added the function for slli. Further, we altered the data memory, and instruction memory. Instruction memory was initialised with dummy values initially. We initialised all to 0 so as to make it function properly. The data memory was initialised with array values for sorting. An entire branch unit module was added to manage branch and output a signal addermuxselect which was then ANDED with branch in the toplevelmodule to give the branch decision.
     \pagebreak
 \subsection{Code and Waveform}
-The link for the code can be found \href{https://github.com/NehalNN10/CA-final-project/blob/main/final_project/final_project.srcs/sources_1/new/RISCV_Processor.v}{here}.
+The link for the code can be found \href{https://github.com/NehalNN10/CA-final-project/blob/main/final_project/final_project.srcs/sources_1/new/RISCV_Processor.v}{here}. The waveforms are further down the document and labeled.
 \begin{figure}[h]
-    \centerline{\includegraphics[scale = 0.5]{SingleCycle1.jpg}}
+    \centerline{\includegraphics[scale = 0.2]{SingleCycle1.png}}
     \caption{Single Cycle Simulation 1}
 \end{figure}
 
 \begin{figure}[h]
-    \centerline{\includegraphics[scale = 0.5]{SingleCycle2.jpg}}
+    \centerline{\includegraphics[scale = 0.2]{SingleCycle2.png}}
     \caption{Single Cycle Simulation 2}
 \end{figure}
 
-\newpage
+
+\begin{figure}[h]
+    \centerline{\includegraphics[scale = 0.2]{SingleCycle3.png}}
+    \caption{Single Cycle Simulation 3}
+\end{figure}
+
 \subsection{Synopsis}
-    To make our sorting algorithm function properly, we introduced changes to the ALU and the final MUX module (by modifying the select line). Additionally, we added a new module called the Branch\_module.
+    To make our sorting algorithm function properly, we introduced changes to the ALU and the final MUX module (by modifying the select line). Additionally, we added a new module called the Branch\_Unit module.
+
 \newpage
+
 \section{Task2}
 \subsection{Testing 5-Stage/Pipelined RISC V Processor for Sorting Algorithm}
 
@@ -206,19 +213,21 @@ To implement a pipelined design, the following modules were added to enable the 
 \item Forwarding\_Unit
 \end{itemize}
 
-Each stage passes the data and instructions to the next stage through the 4 pipeline registers, which help to ensure the proper timing of the data flow and avoid data hazards. These stages and pipeline registers form the backbone of the pipelined processor's operation. The forwarding unit facilitates the forwarding of data between pipeline stages to resolve hazards and maintain proper data flow.
+Each stage passes the data and instructions to the next stage through the 4 pipeline registers, which help to ensure the proper timing of the data flow and avoid data hazards. These stages and pipeline registers form the backbone of the pipelined processor's operation. Extra wires were also used to store the values. The forwarding unit facilitates the forwarding of data between pipeline stages to resolve hazards and maintain proper data flow.
 
 \subsection{Testing Forwarding Unit}
 
-We upgraded our previously developed processor by implementing a Forwarding Unit, which involved adding the Forward Unit module. The forwarding path was then integrated with the pipeline register modules to ensure efficient data flow between stages of the pipeline. These modifications helped to resolve data hazards that may have arisen during the pipelined execution of instructions.
+We upgraded our previously developed processor by implementing a Forwarding Unit, which involved adding the Forward\_Unit module. The forwarding path was then integrated with the pipeline register modules to ensure efficient data flow between stages of the pipeline. These modifications helped to resolve data hazards that may have arisen during the pipelined execution of instructions.
 \pagebreak
 \subsection{Code and Waveform}
-The link for the code can be found \href{https://github.com/NehalNN10/CA-final-project/blob/5b606f284db6f33765f0c830730e5cee43c01f18/final_project/final_project.srcs/sources_1/new/pipelinedProcessor.v}{here}.
+The link for the code can be found \href{https://github.com/NehalNN10/CA-final-project/blob/5b606f284db6f33765f0c830730e5cee43c01f18/final_project/final_project.srcs/sources_1/new/pipelinedProcessor.v}{here}. The
 
 \begin{figure}[h]
-    \centerline{\includegraphics[scale = 0.5]{PipelineCycle.jpg}}
+    \centerline{\includegraphics[scale = 0.2]{Pipelined.png}}
     \caption{Pipelined Cycle Simulation}
 \end{figure}
+
+\newpage
 
 \section{Task 3}
 
@@ -233,7 +242,7 @@ In computer architecture, hazards refer to conflicts that arise when attempting 
 To address this issue, we added a Hazard Detection Unit module to our processor. This module detects hazards and controls the pipeline by sending signals to flush or stall the pipeline. By adding this module, we improved the processor's efficiency and prevented errors caused by hazards.
 
 
-The Hazard Detection Unit uses the input RS1, RS2, RD and MemRead signal to detect hazards in the pipeline. If a hazard is detected, the module signals the pipeline to either flush or stall the pipeline to prevent incorrect results. With this addition, our processor is better equipped to handle hazards and operate more efficiently.
+The Hazard Detection Unit uses the input ID\_EX\_RS1, ID\_EX\_RS2, RD and ID\_EX\_MemRead signal to detect hazards in the pipeline. If a hazard is detected, the module signals the pipeline to either flush or stall the pipeline to prevent incorrect results. With this addition, our processor is better equipped to handle hazards and operate more efficiently.
 
 
 
@@ -241,8 +250,20 @@ The Hazard Detection Unit uses the input RS1, RS2, RD and MemRead signal to dete
 The link to the code can be found \href{https://github.com/NehalNN10/CA-final-project/blob/5b606f284db6f33765f0c830730e5cee43c01f18/final_project/final_project.srcs/sources_1/new/hazardProcessor.v}{here}.
 
 \begin{figure}[h!]
-    \centerline{\includegraphics[scale = 0.5]{Pipelined_RISCV.jpg}}
-    \caption{Pipelined RISC-V Processor}
+    \centerline{\includegraphics[scale = 0.2]{Hazard 1.png}}
+    \caption{Hazard Processor Simulation 1}
+
+  \end{figure}
+
+  \begin{figure}[h!]
+    \centerline{\includegraphics[scale = 0.2]{Hazard 2.png}}
+    \caption{Hazard Processor Simulation 2}
+
+  \end{figure}
+
+  \begin{figure}[h!]
+    \centerline{\includegraphics[scale = 0.2]{Hazard 3.png}}
+    \caption{Hazard Processor Simulation 3}
 
   \end{figure}
   
@@ -262,7 +283,7 @@ Implementing a real processor through gate-level logic has given us a deeper app
 
 \chapter{Comparison}
 
-Pipelined processors are typically designed to be faster than non-pipelined processors, with a potential speedup of up to four times. However, in our case, the pipelined processor is not functioning optimally, with a latency of 3000ns, which is longer than the 1500ns latency of the non-pipelined processor. This suggests that there may be issues with pipeline hazards, control, or other design problems that are affecting the efficiency of your processor. To improve the performance of our pipelined processor, we need to analyze and optimize its design.
+Pipelined processors are typically designed to be faster than non-pipelined processors, with a potential speedup of up to four times. However, in our case, the hazard processor is not functioning optimally, with a latency of 3000ns, which is longer than the 1500ns latency of the non-pipelined processor. This suggests that there may be issues with pipeline hazards, control, or other design problems that are affecting the efficiency of your processor. To improve the performance of our hazard processor, we need to analyze and optimize its design.
 
 \chapter{Task Division}
 \begin{itemize}
